JW7-815 JW7-1282 JW7-1283 Bugfixes for display consistency
Touch only has the "X" close button for the drawer.
clearCompactMode called when something which updates the content of the control bar is called so that its always up-to-date
_userActivity only removes classes and checks for compact mode if we were previously not showing the UI.
Pre-calculate the breakpoint for quicker execution and greater consistency for switching between display modes.

--- a/src/css/imports/tooltip.less
+++ b/src/css/imports/tooltip.less
@@ -1,5 +1,4 @@
 @import "vars";
-@import "icons";
 
 .jw-icon-tooltip.jw-open .jw-overlay {
     opacity: 1;
@@ -15,7 +14,9 @@
 }
 
 .jw-icon-tooltip.jw-open-drawer {
-    .jw-icon-close;
+    &:before {
+        display: none;
+    }
 }
 
 .jw-icon-tooltip.jw-open-drawer .jw-overlay-horizontal {
